Rename BCC to BPF, add helper scripts and 2_hello_world.py